# memetrain

./: .gitignore  LICENSE  README.md  memetrain.py  pyproject.toml
assets/: drivers.json
